feat: Phase 1 Setup - project structure, dependencies, tooling
- T001: Create directory structure (src/tui, src/integrations/{linear,github,notion},
  src/sessions, src/workflows/builtins, src/memory, test/{unit,contract,integration},
  scripts)
- T002: Add missing dependencies (@opentui-ui/dialog, @opentui-ui/toast,
  ts-json-schema-generator), configure tsconfig with include/exclude
- T003: Verify oxlint/oxfmt configuration and dev scripts (lint, lint:fix, fmt,
  fmt:check)
- Expand .gitignore with Node.js/TypeScript/Bun patterns
- Fix tsconfig to exclude node_modules from type checking
- Format all files with oxfmt

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-node_modules
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+*.tsbuildinfo
+
+# Compiled binary
+specstar
+
+# Environment
+.env
+.env.*
+!.env.example
+
+# SQLite cache
+.specstar/
+
+# OS artifacts
+.DS_Store
+Thumbs.db
+
+# Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+
+# Generated schema (regenerated via `bun run schema`)
+specstar.schema.json
+
+# Test coverage
+coverage/
+
+# Temporary files
+*.tmp
