feat: implement Phase 2 foundational infrastructure (T004-T016)
Phase 2 establishes all core infrastructure required before user story
implementation can begin.

Shared types (T004):
- src/types.ts: Re-exports all contract types, branded type constructors,
  state machine validators (WorkerStatus, SpecStatus), badge priority map

Database layer (T005):
- src/db.ts: SQLite schema with 6 tables, 13 indexes, WAL mode,
  generic IntegrationCache<T> with delta detection

Theme system (T006):
- src/tui/theme.ts: Base16 semantic color mapping (12 roles),
  ANSI fallback, hex override, badge color resolver

Configuration (T007):
- src/config.ts: 4-location file discovery chain, shallow merge,
  env var API key overrides, sensible defaults

Integration clients (T008-T012):
- src/integrations/linear/: GraphQL client for issues, states, comments
- src/integrations/github/: gh CLI wrapper for PRs, repo auto-detection
- src/integrations/github/worktree.ts: Git worktree management
- src/integrations/notion/: REST API client with block<->markdown conversion
- src/memory/: SQLite-backed project memory store (CRUD + search)

Application shell (T013-T014):
- src/index.tsx: CLI entry point with arg parsing, config, DB init
- src/app.tsx: Root component with DialogProvider, Toaster, integration
  signals, polling scaffolding (Linear 30s, GitHub 30s, Worktrees 10s,
  Notion 60s)

Build tooling (T015-T016):
- scripts/generate-schema.ts: JSON Schema generation from SpecstarConfig
- build.ts: Standalone binary compilation via Bun.build

All 13 tasks pass: tsc --noEmit, oxlint (0 warnings), oxfmt --check.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "fmt": "oxfmt",
     "fmt:check": "oxfmt --check",
     "lint": "oxlint",
-    "lint:fix": "oxlint --fix"
+    "lint:fix": "oxlint --fix",
+    "schema": "bun scripts/generate-schema.ts",
+    "build": "bun build.ts"
   },
   "dependencies": {
     "@oh-my-pi/pi-coding-agent": "^13.2.1",
