--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,8 @@ node_modules/
 dist/
 *.tsbuildinfo
 
-# Compiled binary
+# Compiled binary (legacy; build now targets dist/)
 specstar
-
 # Environment
 .env
 .env.*
