Move contracts to src/ and add comprehensive test suite
- Move 8 contract files from specs/001-issue-centric-tui/contracts/ to
  src/contracts/ via git mv, preserving history
- Update 22 files with new import paths across src/ and scripts/
- Add bun test runner config: test script in package.json, [test] section
  in bunfig.toml with root scoped to test/
- Add 188 unit tests (345 assertions) across 6 test files:
  - enrichment.test.ts: extractIdentifier, assignSection, resolveBadge,
    enrichIssues linking algorithm, sorting, buildIssueListModel
  - types.test.ts: branded constructors, generateSessionId, worker/spec
    state machine transitions, badge priority constants
  - session-events.test.ts: type guards, workerEventToNotification,
    SessionEventAggregator dedup/dismiss/sort
  - config.test.ts: defaults, loadConfig discovery chain, merge strategy,
    env var overrides, invalid JSON handling
  - db.test.ts: initDatabase, WAL mode, corruption recovery, createCache,
    IntegrationCache CRUD and delta detection
  - workflows/engine.test.ts: DAG validation, cycle detection, topological
    wave execution, step failure propagation
- Add test/helpers.ts with factory functions for test data
- Update README to reflect new contract locations and test setup

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
     "schema": "bun scripts/generate-schema.ts",
-    "build": "bun build.ts"
+    "build": "bun build.ts",
+    "test": "bun test"
   },
   "dependencies": {
     "@oh-my-pi/pi-coding-agent": "^13.2.1",
