fix: compiled binary preload resolution and add build:link script
- Add target: "bun" to Bun.build() per opentui/solid docs
- Move Solid preload from top-level bunfig.toml to explicit --preload
  CLI flag in dev script so compiled binary doesn't fail with
  "preload not found" when run from project root
- Add build:link script to symlink dist/specstar to ~/.local/bin
- Update README with build:link, test commands, and build details
- Update CHANGELOG with build fixes and build:link addition

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "version": "0.0.1",
   "scripts": {
-    "dev": "bun src/index.tsx",
+    "dev": "bun --preload @opentui/solid/preload src/index.tsx",
     "fmt": "oxfmt",
     "fmt:check": "oxfmt --check",
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
     "schema": "bun scripts/generate-schema.ts",
     "build": "bun build.ts",
+    "build:link": "bun run build && ln -sf $(pwd)/dist/specstar ~/.local/bin/specstar",
     "test": "bun test"
   },
   "dependencies": {
