feat: Issue-centric TUI for spec-driven development and async agent orchestration (#1)
* Adds 001 spec + constitution

* Adds 001 plan

* Updates 001 plan

* Adds 001 tasks

* Reinstall dependencies

* feat: Phase 1 Setup - project structure, dependencies, tooling

- T001: Create directory structure (src/tui, src/integrations/{linear,github,notion},
  src/sessions, src/workflows/builtins, src/memory, test/{unit,contract,integration},
  scripts)
- T002: Add missing dependencies (@opentui-ui/dialog, @opentui-ui/toast,
  ts-json-schema-generator), configure tsconfig with include/exclude
- T003: Verify oxlint/oxfmt configuration and dev scripts (lint, lint:fix, fmt,
  fmt:check)
- Expand .gitignore with Node.js/TypeScript/Bun patterns
- Fix tsconfig to exclude node_modules from type checking
- Format all files with oxfmt

* feat: implement Phase 2 foundational infrastructure (T004-T016)

Phase 2 establishes all core infrastructure required before user story
implementation can begin.

Shared types (T004):
- src/types.ts: Re-exports all contract types, branded type constructors,
  state machine validators (WorkerStatus, SpecStatus), badge priority map

Database layer (T005):
- src/db.ts: SQLite schema with 6 tables, 13 indexes, WAL mode,
  generic IntegrationCache<T> with delta detection

Theme system (T006):
- src/tui/theme.ts: Base16 semantic color mapping (12 roles),
  ANSI fallback, hex override, badge color resolver

Configuration (T007):
- src/config.ts: 4-location file discovery chain, shallow merge,
  env var API key overrides, sensible defaults

Integration clients (T008-T012):
- src/integrations/linear/: GraphQL client for issues, states, comments
- src/integrations/github/: gh CLI wrapper for PRs, repo auto-detection
- src/integrations/github/worktree.ts: Git worktree management
- src/integrations/notion/: REST API client with block<->markdown conversion
- src/memory/: SQLite-backed project memory store (CRUD + search)

Application shell (T013-T014):
- src/inde

--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
-	"scripts": {
-		"dev": "bun src/index.tsx",
-		"fmt": "oxfmt",
-		"fmt:check": "oxfmt --check",
-		"lint": "oxlint",
-		"lint:fix": "oxlint --fix"
-	},
-	"devDependencies": {
-		"@types/bun": "latest",
-		"@types/react": "^19.2.14",
-		"oxfmt": "^0.35.0",
-		"oxlint": "^1.50.0"
-	},
-	"dependencies": {
-		"@oh-my-pi/pi-coding-agent": "^13.2.1",
-		"@opentui/solid": "^0.1.82",
-		"solid-js": "^1.9.11"
-	}
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "bun --preload @opentui/solid/preload src/index.tsx",
+    "fmt": "oxfmt",
+    "fmt:check": "oxfmt --check",
+    "lint": "oxlint",
+    "lint:fix": "oxlint --fix",
+    "schema": "bun scripts/generate-schema.ts",
+    "build": "bun build.ts",
+    "build:link": "bun run build && ln -sf $(pwd)/dist/specstar ~/.local/bin/specstar",
+    "test": "bun test"
+  },
+  "dependencies": {
+    "@oh-my-pi/pi-coding-agent": "^13.2.1",
+    "@opentui-ui/dialog": "^0.1.2",
+    "@opentui-ui/toast": "^0.0.5",
+    "@opentui/solid": "^0.1.82",
+    "solid-js": "^1.9.11"
+  },
+  "devDependencies": {
+    "@types/bun": "latest",
+    "@types/react": "^19.2.14",
+    "oxfmt": "^0.35.0",
+    "oxlint": "^1.50.0",
+    "ts-json-schema-generator": "^2.5.0"
+  },
+  "trustedDependencies": [
+    "protobufjs"
+  ]
 }
